--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,130 @@
-div {
+@charset "UTF-8";
+/* VARIABLES */
+/* VARIABLES */
+/* GLOBALES */
+/* IMPORTS */
+/* NORMALIZE */
+*,
+*::after
+*::before
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+/* GLOBALES */
+html {
+  font-size: 62.5%;
+  font-family: "Montserrat", sans-serif; }
+
+body {
+  background-image: linear-gradient(to bottom, #000000, #050505, #090909, #0d0d0d, #111111, #141414, #171717, #191919, #1c1c1c, #1e1e1e, #212121, #242424);
+  overflow-x: hidden;
+  min-height: 100vh; }
+
+/*HELPERS*/
+.flex-row {
+  display: flex; }
+
+.flex-column {
+  display: flex;
   flex-direction: column; }
-  div p {
-    color: red; }
+
+.flex-wrap {
+  flex-wrap: wrap; }
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto; }
+
+/* HELPERS */
+/* PARTIALS */
+/* ESTILOS HEADER Y NAVBAR*/
+/* HEADER INDEX*/
+.container__header {
+  grid-area: header;
+  padding: 0rem;
+  margin: 0rem; }
+  .container__header--index {
+    padding: 0rem;
+    margin: 0rem;
+    margin-bottom: 0rem;
+    text-align: center;
+    max-width: 100%;
+    background-image: url(../../assets/images/bg/header.svg); }
+  .container__header--img {
+    padding-top: 2rem;
+    max-width: 100px;
+    align-items: center;
+    margin: 0rem; }
+  .container__header--título {
+    font-size: 4em;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    color: #971717;
+    animation-duration: 3s;
+    animation-name: backInLeft;
+    animation-iteration-count: infinite; }
+    .container__header--título--span {
+      color: lightslategray;
+      font-size: 0.5em;
+      font-weight: bold; }
+
+/* HEADER SECCIONES*/
+.container__header {
+  grid-area: header;
+  padding: 0rem;
+  margin: 0rem; }
+  .container__header--secciones {
+    padding: 0rem;
+    margin: 0rem;
+    margin-bottom: 0rem;
+    text-align: center;
+    max-width: 100%;
+    background-image: url(../../assets/images/bg/header.svg); }
+  .container__header--título {
+    font-size: 4em;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    color: #971717;
+    animation-duration: 3s;
+    animation-name: backInLeft;
+    animation-iteration-count: infinite; }
+    .container__header--título--span {
+      color: lightslategray;
+      font-size: 0.5em;
+      font-weight: bold; }
+
+/* NAVBAR GENERAL*/
+.navbar {
+  margin: 0rem auto;
+  padding: 1rem 3rem;
+  background-color: #111111;
+  margin: 0rem;
+  flex-wrap: wrap; }
+
+.menu {
+  border-top: 0.1rem solid #fff;
+  border-bottom: 0.1rem solid #fff;
+  display: flex;
+  justify-content: space-around;
+  padding: 0rem;
+  flex-wrap: wrap; }
+  .menu__item {
+    list-style-type: none; }
+  .menu__link {
+    padding: 1rem;
+    color: #fff;
+    display: block;
+    text-decoration: none;
+    font-weight: bold;
+    width: 100%;
+    text-align: center;
+    font-size: 2em;
+    flex-wrap: wrap; }
+    .menu__link:hover {
+      background: #971717;
+      color: #ffffff; }
+
+/* ESTILOS FOOTER*/
+/* VIEWS */
