--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -1,1 +1,104 @@
 /* ESTILOS HEADER Y NAVBAR*/
+
+/* HEADER INDEX*/
+.container__header {
+    grid-area: header;
+    padding: 0rem;
+    margin: 0rem;
+    &--index {
+        padding: 0rem;
+        margin: 0rem;
+        margin-bottom: 0rem;
+        text-align: center;
+        max-width: 100%;
+        background-image: url(../../assets/images/bg/header.svg);
+        }
+    &--img {
+        padding-top: 2rem;
+        max-width: 100px;
+        align-items: center;
+        margin: 0rem;
+        }
+    &--título {
+        font-size: 4em;
+        font-family: "Montserrat", sans-serif;
+        font-weight:bold;
+        color: #971717;
+        animation-duration: 3s;
+        animation-name: backInLeft;
+        animation-iteration-count: infinite;
+        &--span {
+        color: lightslategray;
+        font-size: 0.5em;
+        font-weight:bold;  
+        }
+    }        
+}
+  /* HEADER SECCIONES*/
+.container__header {
+    grid-area: header;
+    padding: 0rem;
+    margin: 0rem;
+    &--secciones {
+    padding: 0rem;
+    margin: 0rem;
+    margin-bottom: 0rem;
+    text-align: center;
+    max-width: 100%;
+    background-image: url(../../assets/images/bg/header.svg);
+}
+    &--título {
+            font-size: 4em;
+            font-family: "Montserrat", sans-serif;
+            font-weight:bold;
+            color: #971717;
+            animation-duration: 3s;
+            animation-name: backInLeft;
+            animation-iteration-count: infinite;
+            &--span {
+            color: lightslategray;
+            font-size: 0.5em;
+            font-weight:bold;  
+        }
+    }
+}
+  /* NAVBAR GENERAL*/
+.navbar {
+    margin: 0rem auto;
+    padding: 1rem 3rem;
+    background-color: #111111;
+    margin: 0rem;
+    flex-wrap: wrap; 
+  }
+.menu {
+    border-top: 0.1rem solid #fff;
+    border-bottom: 0.1rem solid #fff;
+    display: flex;
+    justify-content: space-around;
+    padding: 0rem;
+    flex-wrap: wrap;
+    &__item {
+    list-style-type: none;
+    }
+    &__link {
+    padding: 1rem;
+    color: #fff;
+    display: block;
+    text-decoration: none;
+    font-weight: bold;
+    width: 100%;
+    text-align: center;
+    font-size: 2em;
+    flex-wrap: wrap; 
+        &:hover {
+            background: #971717;
+            color: #ffffff; 
+        }
+    }
+}
+  
+  
+  
+  
+  
+  
