--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,53 @@
 @charset "UTF-8";
 /* VARIABLES */
 /* VARIABLES */
+/* MAPS */
+/* EXTENDS */
+.fotografía, .video, .edicion-de-video {
+  font-size: 2em;
+  font-weight: bold;
+  color: #971717;
+  text-decoration: underline;
+  display: flex;
+  justify-content: center;
+  padding: 0rem;
+  margin: 0rem;
+  max-width: 100%; }
+
+.texto, .texto2, .texto3 {
+  color: beige;
+  font-size: 2em;
+  padding: 0rem 1rem;
+  margin: 0rem 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 100%;
+  text-align: justify;
+  max-width: 100%; }
+
 /* GLOBALES */
 /* IMPORTS */
 /* NORMALIZE */
 *,
-*::after
-*::before
-* {
-  margin: 0;
+*::after *::before * {
+  margin: 0 auto;
   padding: 0;
   box-sizing: border-box; }
 
 /* GLOBALES */
 html {
   font-size: 62.5%;
-  font-family: "Montserrat", sans-serif; }
+  font-family: 'Roboto Condensed', sans-serif; }
 
 body {
   background-image: linear-gradient(to bottom, #000000, #050505, #090909, #0d0d0d, #111111, #141414, #171717, #191919, #1c1c1c, #1e1e1e, #212121, #242424);
-  overflow-x: hidden;
-  min-height: 100vh; }
+  overflow-x: hidden; }
 
 /*HELPERS*/
 .flex-row {
-  display: flex; }
+  display: flex;
+  flex-direction: row; }
 
 .flex-column {
   display: flex;
@@ -34,58 +57,67 @@ body {
   flex-wrap: wrap; }
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto; }
+  max-width: 1500px;
+  margin: 0rem auto;
+  padding: 0rem auto; }
 
-/* HELPERS */
 /* PARTIALS */
 /* ESTILOS HEADER Y NAVBAR*/
 /* HEADER INDEX*/
 .container__header {
-  grid-area: header;
-  padding: 0rem;
-  margin: 0rem; }
+  padding: 0rem auto;
+  margin: 0rem auto;
+  width: 1500px;
+  max-width: 100%; }
   .container__header--index {
-    padding: 0rem;
-    margin: 0rem;
+    padding: 0rem auto;
+    margin: 0rem auto;
     margin-bottom: 0rem;
     text-align: center;
     max-width: 100%;
-    background-image: url(../../assets/images/bg/header.svg); }
+    background-image: url(../../assets/images/header.svg); }
   .container__header--img {
-    padding-top: 2rem;
-    max-width: 100px;
+    padding: 2rem;
+    margin: 2rem auto;
+    max-width: 10rem;
     align-items: center;
-    margin: 0rem; }
+    margin: 1rem auto; }
   .container__header--título {
     font-size: 4em;
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
+    font-family: 'Roboto Condensed', sans-serif;
     color: #971717;
+    margin: 0rem auto;
+    padding: 0rem;
     animation-duration: 3s;
     animation-name: backInLeft;
     animation-iteration-count: infinite; }
     .container__header--título--span {
       color: lightslategray;
-      font-size: 0.5em;
-      font-weight: bold; }
+      font-size: 0.5em; }
+
+.picture__index {
+  width: 1500px;
+  max-width: 100%;
+  height: 65vh;
+  margin: 0rem auto;
+  padding: 0rem auto;
+  align-items: center; }
 
 /* HEADER SECCIONES*/
 .container__header {
   grid-area: header;
-  padding: 0rem;
-  margin: 0rem; }
+  padding: 0rem auto;
+  margin: 0rem auto; }
   .container__header--secciones {
     padding: 0rem;
     margin: 0rem;
     margin-bottom: 0rem;
     text-align: center;
     max-width: 100%;
-    background-image: url(../../assets/images/bg/header.svg); }
+    background-image: url(../../assets/images/header.svg); }
   .container__header--título {
     font-size: 4em;
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
+    font-family: 'Roboto Condensed', sans-serif;
     color: #971717;
     animation-duration: 3s;
     animation-name: backInLeft;
@@ -98,7 +130,7 @@ body {
 /* NAVBAR GENERAL*/
 .navbar {
   margin: 0rem auto;
-  padding: 1rem 3rem;
+  padding: 0rem 3rem;
   background-color: #111111;
   margin: 0rem;
   flex-wrap: wrap; }
@@ -117,7 +149,6 @@ body {
     color: #fff;
     display: block;
     text-decoration: none;
-    font-weight: bold;
     width: 100%;
     text-align: center;
     font-size: 2em;
@@ -127,4 +158,288 @@ body {
       color: #ffffff; }
 
 /* ESTILOS FOOTER*/
+.container__footer {
+  grid-area: footer;
+  padding: 0rem;
+  margin: 0rem auto;
+  background-image: url(../../assets/images/header.svg);
+  justify-content: space-evenly;
+  align-items: center;
+  width: 1500px;
+  max-width: 100%;
+  max-height: 100vh; }
+  .container__footer .contenido__footer {
+    max-width: 100%;
+    margin: 0rem auto;
+    padding: 2rem 0rem;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 1500px;
+    max-width: 100%;
+    min-width: 350px;
+    display: flex;
+    flex-direction: row; }
+    .container__footer .contenido__footer--lista {
+      margin: auto 2rem;
+      padding: 1rem;
+      align-content: center; }
+      .container__footer .contenido__footer--lista .datos {
+        color: #971717;
+        font-size: 2em;
+        list-style: none; }
+        .container__footer .contenido__footer--lista .datos .span__foot {
+          font-weight: bold; }
+      .container__footer .contenido__footer--lista .iconos {
+        justify-content: space-evenly;
+        margin: auto 2rem;
+        padding: auto 3rem;
+        flex-wrap: wrap; }
+        .container__footer .contenido__footer--lista .iconos__link {
+          justify-content: space-around;
+          flex-wrap: wrap;
+          display: inline-block; }
+
 /* VIEWS */
+.container__secciones {
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+  width: 100%; }
+  .container__secciones .título__sección {
+    color: #971717;
+    font-size: 5em;
+    font-style: italic;
+    margin: 0rem;
+    text-align: center;
+    width: 100%; }
+    .container__secciones .título__sección__descrip {
+      font-size: 1.5em;
+      padding: 1rem;
+      margin: 0rem;
+      width: 100%;
+      color: aliceblue; }
+
+.foto__sección {
+  margin: 0 auto;
+  justify-content: center;
+  width: 150rem; }
+  .foto__sección__sobremí {
+    width: 100%;
+    margin: 0rem auto;
+    padding: 0rem; }
+
+.container__secciones {
+  margin: 0 auto;
+  padding: 0 auto;
+  text-align: center;
+  width: 100%;
+  background-image: url(../../assets/images/header.svg); }
+  .container__secciones .título__sección {
+    color: #971717;
+    font-size: 5em;
+    font-style: italic;
+    margin: 0rem;
+    text-align: center;
+    width: 100%; }
+    .container__secciones .título__sección__descrip {
+      width: 100%;
+      max-width: 1300px;
+      font-size: 2em;
+      padding: 5rem 2rem;
+      margin: 0rem 2rem;
+      color: aliceblue;
+      justify-content: space-around; }
+
+.foto__sección {
+  margin: 0 auto;
+  justify-content: center;
+  width: 150rem; }
+  .foto__sección__sobremí {
+    width: 100%;
+    margin: 0rem auto;
+    padding: 0rem; }
+
+.container__secciones {
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+  width: 100%;
+  background-image: url(../../assets/images/header.svg); }
+  .container__secciones .título__sección {
+    color: #971717;
+    font-size: 5em;
+    font-style: italic;
+    margin: 0rem;
+    text-align: center;
+    width: 100%; }
+    .container__secciones .título__sección__descrip {
+      font-size: 1.5em;
+      padding: 1rem;
+      margin: 0rem;
+      width: 100%;
+      color: aliceblue; }
+
+.contenedor__servicios {
+  flex-wrap: wrap;
+  width: 1500px;
+  max-width: 100%;
+  margin: 0rem auto;
+  padding: 0rem auto;
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(6, auto);
+  grid-template-areas: "fotografía fotografía" "foto texto1" "video video" "texto2 video2" "edicion-de-video edicion-de-video" "video3 texto3"; }
+
+.fotografía {
+  grid-area: fotografía; }
+
+.video {
+  grid-area: video; }
+
+.edicion-de-video {
+  grid-area: edicion-de-video; }
+
+.texto {
+  grid-area: texto1; }
+
+.texto2 {
+  grid-area: texto2; }
+
+.texto3 {
+  grid-area: texto3; }
+
+.img-sec {
+  grid-area: foto;
+  padding: 0rem;
+  display: flex;
+  margin: auto 0rem;
+  width: 100%; }
+
+.video1 {
+  padding: 0rem;
+  display: flex;
+  margin: auto 0rem;
+  width: 100%;
+  grid-area: video1;
+  max-width: 100%; }
+
+.video3 {
+  display: flex;
+  margin: auto 0rem;
+  padding: 0rem;
+  width: 100%;
+  grid-area: video3;
+  max-width: 100%; }
+
+.foto {
+  grid-area: foto;
+  padding: 0;
+  max-width: 100%; }
+
+.texto1 {
+  grid-area: texto;
+  text-align: justify;
+  max-width: 100%; }
+
+.video2 {
+  max-width: 100%;
+  grid-area: video2;
+  display: flex;
+  align-items: flex-end; }
+
+@media only screen and (max-width: 500px) {
+  .header {
+    max-width: 400px; }
+  .contenedor-servicios {
+    flex-wrap: wrap;
+    width: 500px;
+    max-width: 100%;
+    margin: 0rem auto;
+    display: grid;
+    grid-gap: 0rem;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(10, auto);
+    grid-template-areas: "fotografía" "texto" "foto" "video" "texto2" "video2" "edicion-de-video" "texto3" "video3" "footer"; }
+  .fotografía {
+    max-width: 100%; }
+  .foto {
+    max-width: 100%; } }
+
+.container__secciones {
+  margin: 0 auto;
+  padding: 0;
+  text-align: center;
+  width: 100%; }
+  .container__secciones .título__sección {
+    color: #971717;
+    font-size: 5em;
+    font-style: italic;
+    margin: 0rem;
+    text-align: center;
+    width: 100%; }
+    .container__secciones .título__sección__descrip {
+      font-size: 1.5em;
+      padding: 1rem;
+      margin: 0rem;
+      width: 100%;
+      color: aliceblue; }
+
+.container__form {
+  width: 42rem;
+  max-width: 100%;
+  height: auto;
+  margin: 2rem auto;
+  border-radius: 2rem;
+  padding: 2rem;
+  background-color: #fbfbfb;
+  padding: 1rem 1rem; }
+  .container__form .item__form {
+    background-color: #fbfbfb;
+    width: 40rem;
+    max-width: 100%;
+    height: 4rem;
+    border-radius: 1rem;
+    border-style: solid;
+    border-width: 0.1rem;
+    border-color: #971717;
+    margin-top: 1rem;
+    margin-bottom: 2rem; }
+    .container__form .item__form--input {
+      width: 35rem;
+      max-width: 100%;
+      justify-content: center; }
+    .container__form .item__form--label {
+      display: block;
+      float: center;
+      font-size: 2rem;
+      text-align: center;
+      color: #971717; }
+    .container__form .item__form--textarea {
+      background-color: #fbfbfb;
+      width: 40rem;
+      max-width: 100%;
+      height: 15rem;
+      border-radius: 0.5rem;
+      border-style: solid;
+      border-width: 0.1rem;
+      border-color: #971717;
+      margin-top: 1rem;
+      padding-left: 1rem;
+      margin-bottom: 2rem;
+      padding-top: 1.5rem; }
+
+button {
+  height: 4.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+  text-transform: uppercase;
+  background-color: #971717;
+  border-color: #971717;
+  border-style: solid;
+  border-radius: 0.1rem;
+  width: 42rem;
+  max-width: 100%;
+  cursor: pointer; }
