--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,1 +1,49 @@
 /* ESTILOS FOOTER*/
+.container__footer {
+    grid-area: footer;
+    padding: 0rem;
+    margin: 0rem auto;
+    background-image: url(../../assets/images/header.svg);
+    justify-content: space-evenly;
+    align-items: center;
+    width: 1500px;
+    max-width: 100%;
+    max-height: 100vh;
+    .contenido__footer {
+        max-width: 100%;
+        margin: 0rem auto;
+        padding: 2rem 0rem;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 1500px;
+        max-width: 100%;
+        min-width: 350px;
+        display: flex;
+        flex-direction: row;
+        &--lista {
+            margin: auto 2rem;
+            padding: 1rem;
+            align-content: center;
+            .datos {
+                color: #971717;
+                font-size: 2em;
+                list-style: none;
+            .span__foot {
+                font-weight: bold;
+            }
+            }
+        .iconos {
+            justify-content: space-evenly;
+            margin: auto 2rem;
+            padding: auto 3rem;
+            flex-wrap: wrap;
+            &__link {
+                justify-content: space-around;
+                flex-wrap: wrap;
+                display: inline-block;
+            }
+            }
+        }
+
+    }
+}
