--- a/sass/views/_sobre-mí.scss
+++ b/sass/views/_sobre-mí.scss
@@ -1,12 +1,34 @@
 .container__secciones {
-    
+    margin: 0 auto;
+    padding: 0 auto;
+    text-align: center;
+    width: 100%;
+    background-image: url(../../assets/images/header.svg);
     .título__sección {
-
+        color: #971717;
+        font-size: 5em;
+        font-style: italic;
+        margin: 0rem;
+        text-align: center;
+        width: 100%;
         &__descrip {
-
+            width: 100%;
+            max-width: 1300px;
+            font-size: 2em;
+            padding: 5rem 2rem;
+            margin: 0rem 2rem;
+            color: aliceblue;
+            justify-content: space-around;
         }
     }
-    .img__sobremí {
-
+}
+.foto__sección {
+    margin: 0 auto;
+    justify-content: center;
+    width: 150rem;
+    &__sobremí {
+        width: 100%;
+        margin: 0rem auto;
+        padding: 0rem;
     }
 }
