--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -2,7 +2,7 @@
 .container__footer {
     grid-area: footer;
     padding: 0rem;
-    margin: 0rem auto;
+    margin: 1rem auto;
     background-image: url(../../assets/images/header.svg);
     justify-content: space-evenly;
     align-items: center;
@@ -24,6 +24,7 @@
             margin: auto 2rem;
             padding: 1rem;
             align-content: center;
+            text-align: center;
             .datos {
                 color: #971717;
                 font-size: 2em;
@@ -31,7 +32,7 @@
             .span__foot {
                 font-weight: bold;
             }
-            }
+        }
         .iconos {
             justify-content: space-evenly;
             margin: auto 2rem;
