--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -15,7 +15,8 @@
         background-image: url(../../assets/images/header.svg);
         }
     &--img {
-        padding: 2rem;
+        padding-top: 2rem;
+        margin-top: 2rem;
         margin: 2rem auto;
         max-width: 10rem;
         align-items: center;
@@ -36,14 +37,6 @@
         }
     }        
 }
-.picture__index {
-    width: 1500px;
-    max-width: 100%;
-    height: 65vh;
-    margin: 0rem auto;
-    padding: 0rem auto;
-    align-items: center;
-}
   /* HEADER SECCIONES*/
 .container__header {
     grid-area: header;
@@ -56,7 +49,7 @@
     text-align: center;
     max-width: 100%;
     background-image: url(../../assets/images/header.svg);
-}
+    }
     &--título {
             font-size: 4em;
             font-family: 'Roboto Condensed', sans-serif;
