--- a/sass/views/_contactame.scss
+++ b/sass/views/_contactame.scss
@@ -1,3 +1,31 @@
+/* CONTACTO */
+.container__secciones {
+    margin: 0 auto;
+    padding: 0;
+    text-align: center;
+    width: 100%;
+    .título__sección {
+        &--sm {        
+        color: #971717;
+        font-size: 5em;
+        font-style: italic;
+        margin: 0rem auto;
+        padding: 0rem auto;
+        text-align: center;
+        width: 100%;
+        }
+    &--descrip {
+            max-width: 95%;
+            font-size: 2em;
+            color: aliceblue;
+            padding: 1rem 2rem;
+            margin: 0rem 2rem;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+        }
+    }
+}
 .container__form {  
     width: 42rem; 
     max-width: 100%;
