--- a/sass/views/_servicios-ofrecidos.scss
+++ b/sass/views/_servicios-ofrecidos.scss
@@ -1,22 +1,27 @@
+/* SERVICIOS */
 .container__secciones {
-    margin: 0 auto;
-    padding: 0;
-    text-align: center;
+	width: 1500px;
     width: 100%;
     background-image: url(../../assets/images/header.svg);
     .título__sección {
-        color: #971717;
-        font-size: 5em;
-        font-style: italic;
-        margin: 0rem;
-        text-align: center;
-        width: 100%;
-        &__descrip {
-            font-size: 1.5em;
-            padding: 1rem;
-            margin: 0rem;
-            width: 100%;
-            color: aliceblue;
+		&--sm {        
+		color: #971717;
+		font-size: 5em;
+		font-style: italic;
+		margin: 0rem auto;
+		padding: 0rem auto;
+		text-align: center;
+		width: 100%;
+		}
+		&--descrip {
+			max-width: 95%;
+			font-size: 2em;
+			color: aliceblue;
+			padding: 1rem 2rem;
+			margin: 0rem 2rem;
+			text-align: center;
+			display: flex;
+			justify-content: center;
         }
     }
 }
@@ -97,6 +102,7 @@
 	align-items: flex-end;
 }
 
+
 @media only screen and (max-width:500px) {
 	.header {
 		max-width: 400px;
@@ -109,7 +115,7 @@
 		display: grid;
 		grid-gap: 0rem;
 		grid-template-columns: repeat(1, 1fr);
-		grid-template-rows: repeat(10,auto);
+		grid-template-rows: repeat(10, 1fr);
 		grid-template-areas: "fotografía" "texto" "foto" "video" "texto2" "video2" "edicion-de-video" "texto3" "video3" "footer";
 	}
 	.fotografía {
