--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,8 @@ body {
     padding-top: 2rem;
     margin-top: 2rem;
     margin: 2rem auto;
-    max-width: 10rem;
+    width: 10rem;
+    height: 10rem;
     align-items: center;
     margin: 1rem auto; }
   .container__header--título {
@@ -109,7 +110,7 @@ body {
     max-width: 100%;
     background-image: url(../../assets/images/header.svg); }
   .container__header--título {
-    font-size: 4em;
+    font-size: 3em;
     font-family: 'Roboto Condensed', sans-serif;
     color: #971717;
     animation-duration: 3s;
@@ -154,7 +155,7 @@ body {
 .container__footer {
   grid-area: footer;
   padding: 0rem;
-  margin: 1rem auto;
+  margin: 0rem auto;
   background-image: url(../../assets/images/header.svg);
   justify-content: space-evenly;
   align-items: center;
@@ -180,7 +181,8 @@ body {
       .container__footer .contenido__footer--lista .datos {
         color: #971717;
         font-size: 2em;
-        list-style: none; }
+        list-style: none;
+        text-align: justify; }
         .container__footer .contenido__footer--lista .datos .span__foot {
           font-weight: bold; }
       .container__footer .contenido__footer--lista .iconos {
@@ -243,17 +245,18 @@ body {
     color: aliceblue;
     padding: 1rem 2rem;
     margin: 0rem 2rem;
-    text-align: center;
+    text-align: justify;
     display: flex;
     justify-content: center; }
 
 .foto__sección {
-  margin: 0 auto;
+  margin: 1rem auto;
   justify-content: center;
   width: 150rem; }
   .foto__sección__sobremí {
     width: 100%;
-    margin: 0rem auto;
+    height: 100%;
+    margin: 1rem auto;
     padding: 0rem; }
 
 /* SERVICIOS */
