--- a/sass/views/_sobre-mí.scss
+++ b/sass/views/_sobre-mí.scss
@@ -21,19 +21,20 @@
             color: aliceblue;
             padding: 1rem 2rem;
             margin: 0rem 2rem;
-            text-align: center;
+            text-align: justify;
             display: flex;
             justify-content: center;
         }
     }
 }
 .foto__sección {
-    margin: 0 auto;
+    margin: 1rem auto;
     justify-content: center;
     width: 150rem;
     &__sobremí {
         width: 100%;
-        margin: 0rem auto;
+        height: 100%;
+        margin: 1rem auto;
         padding: 0rem;
     }
 }
