--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,7 @@ body {
     max-width: 100%;
     background-image: url(../../assets/images/header.svg); }
   .container__header--título {
-    font-size: 3em;
+    font-size: 2.5em;
     font-family: 'Roboto Condensed', sans-serif;
     color: #971717;
     animation-duration: 3s;
@@ -431,61 +431,81 @@ body {
     display: flex;
     justify-content: center; }
 
-.container__form {
-  width: 42rem;
-  max-width: 100%;
+.contact_form {
+  width: 100%;
+  max-width: 35rem;
   height: auto;
-  margin: 2rem auto;
-  border-radius: 2rem;
-  padding: 2rem;
+  margin: 1rem auto 4rem auto;
+  border-radius: 1rem;
+  padding: 1rem auto;
   background-color: #fbfbfb;
-  padding: 1rem 1rem; }
-  .container__form .item__form {
-    background-color: #fbfbfb;
-    width: 40rem;
-    max-width: 100%;
-    height: 4rem;
-    border-radius: 1rem;
-    border-style: solid;
-    border-width: 0.1rem;
-    border-color: #971717;
-    margin-top: 1rem;
-    margin-bottom: 2rem; }
-    .container__form .item__form--input {
-      width: 35rem;
-      max-width: 100%;
-      justify-content: center; }
-    .container__form .item__form--label {
-      display: block;
-      float: center;
-      font-size: 2rem;
-      text-align: center;
-      color: #971717; }
-    .container__form .item__form--textarea {
-      background-color: #fbfbfb;
-      width: 40rem;
-      max-width: 100%;
-      height: 15rem;
-      border-radius: 0.5rem;
-      border-style: solid;
-      border-width: 0.1rem;
-      border-color: #971717;
-      margin-top: 1rem;
-      padding-left: 1rem;
-      margin-bottom: 2rem;
-      padding-top: 1.5rem; }
+  padding-left: 1rem;
+  padding-top: 1rem; }
+
+input {
+  background-color: #fbfbfb;
+  width: 33rem;
+  max-width: 100%;
+  height: 4rem;
+  border-radius: 0.5rem;
+  border-style: solid;
+  border-width: 0.1rem;
+  border-color: #971717;
+  margin: 1rem auto;
+  padding-left: 1rem; }
+
+textarea {
+  background-color: #fbfbfb;
+  width: 100%;
+  max-width: 33rem;
+  height: 15rem;
+  border-radius: 0.5rem;
+  border-style: solid;
+  border-width: 0.1rem;
+  border-color: #971717;
+  margin: 1rem auto;
+  padding-left: 1rem;
+  padding-top: 1.5rem; }
+
+label {
+  display: block;
+  float: center;
+  font-size: 1.5em;
+  color: #971717; }
 
 button {
+  width: 100%;
+  max-width: 33rem;
   height: 4.5rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  margin-bottom: 2rem;
-  margin-top: 1rem;
+  padding: auto 0.5rem;
+  margin: 1rem 0.5rem;
   text-transform: uppercase;
   background-color: #971717;
   border-color: #971717;
   border-style: solid;
-  border-radius: 0.1rem;
-  width: 42rem;
-  max-width: 100%;
+  border-radius: 1rem;
   cursor: pointer; }
+
+span {
+  color: #971717; }
+
+.aviso {
+  font-size: 1.5em;
+  color: #0e0e0e;
+  text-align: center;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem; }
+
+::-webkit-input-placeholder {
+  color: #a8a8a8; }
+
+::-webkit-textarea-placeholder {
+  color: #a8a8a8; }
+
+.formulario input:focus {
+  outline: 0;
+  border: 1px solid #971717; }
+
+.formulario textarea:focus {
+  outline: 0;
+  border: 1px solid #971717; }
