--- a/css/main.css
+++ b/css/main.css
@@ -3,28 +3,31 @@
 /* VARIABLES */
 /* MAPS */
 /* EXTENDS */
-.fotografía, .video, .edicion-de-video {
-  font-size: 2em;
+@import url(../misc/_variables.scss);
+@import url(../misc/_normalize.scss);
+.fotografía h2, .video h2, .edicion-de-video h2 {
+  font-size: 3em;
   font-weight: bold;
   color: #971717;
   text-decoration: underline;
   display: flex;
   justify-content: center;
   padding: 0rem;
-  margin: 0rem;
+  margin: 1rem auto 0rem auto;
   max-width: 100%; }
 
 .texto, .texto2, .texto3 {
   color: beige;
   font-size: 2em;
-  padding: 0rem 1rem;
+  padding: 0rem;
   margin: 0rem 1rem;
   display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   max-width: 100%;
-  text-align: justify;
-  max-width: 100%; }
+  text-align: justify; }
 
 /* GLOBALES */
 /* IMPORTS */
@@ -144,12 +147,13 @@ body {
     display: block;
     text-decoration: none;
     width: 100%;
-    text-align: center;
     font-size: 2em;
+    text-align: justify;
     flex-wrap: wrap; }
     .menu__link:hover {
       background: #971717;
-      color: #ffffff; }
+      color: #ffffff;
+      padding-left: 1rem; }
 
 /* ESTILOS FOOTER*/
 .container__footer {
@@ -283,7 +287,6 @@ body {
     justify-content: center; }
 
 .contenedor__servicios {
-  flex-wrap: wrap;
   width: 1500px;
   max-width: 100%;
   margin: 0rem auto;
@@ -292,7 +295,7 @@ body {
   grid-gap: 1rem;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(6, auto);
-  grid-template-areas: "fotografía fotografía" "foto texto1" "video video" "texto2 video2" "edicion-de-video edicion-de-video" "video3 texto3"; }
+  grid-template-areas: "fotografía fotografía"  "foto texto"  "video video"  "texto2 video2"  "edicion-de-video edicion-de-video"  "video3 texto3"; }
 
 .fotografía {
   grid-area: fotografía; }
@@ -340,7 +343,7 @@ body {
   padding: 0;
   max-width: 100%; }
 
-.texto1 {
+.texto {
   grid-area: texto;
   text-align: justify;
   max-width: 100%; }
@@ -351,22 +354,24 @@ body {
   display: flex;
   align-items: flex-end; }
 
-@media only screen and (max-width: 500px) {
-  .header {
-    max-width: 400px; }
-  .contenedor-servicios {
-    flex-wrap: wrap;
-    width: 500px;
-    max-width: 100%;
-    margin: 0rem auto;
-    display: grid;
-    grid-gap: 0rem;
+@media only screen and (max-width: 748px) {
+  .contenedor__servicios {
+    gap: 0;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(10, 1fr);
-    grid-template-areas: "fotografía" "texto" "foto" "video" "texto2" "video2" "edicion-de-video" "texto3" "video3" "footer"; }
+    grid-template-rows: repeat(9, auto);
+    grid-template-areas: "fotografía" "texto"  "foto"  "video"  "texto2"  "video2"  "edicion-de-video"  "texto3" "video3"; }
   .fotografía {
     max-width: 100%; }
   .foto {
+    max-width: 100%; }
+  .fotografía, .video, .edicion-de-video {
+    padding: 0rem;
+    margin: 0rem;
+    max-width: 100%; }
+  .texto p, .texto2 p, .texto3 p {
+    font-size: 1em;
+    padding: 0rem;
+    margin: 1rem auto;
     max-width: 100%; } }
 
 .container__secciones {
