--- a/sass/misc/_variables.scss
+++ b/sass/misc/_variables.scss
@@ -6,6 +6,7 @@ $color-footer: #000000;
 $font: (
     small: 1em,
     medium: 2em,
+    intermedio: 3em,
     large: 4em,
 ) ; 
 
@@ -33,26 +34,29 @@ $font: (
     }
 }
 %titulo-servicios {
-    font-size: map-get($font, medium);
-    font-weight: bold;
-    color: $color-titulos;
-    text-decoration: underline;
-    display: flex;
-    justify-content: center;
-    padding: 0rem;
-    margin: 0rem;
-    max-width: 100%;
+    h2 {
+        font-size: map-get($font, intermedio);
+        font-weight: bold;
+        color: $color-titulos;
+        text-decoration: underline;
+        display: flex;
+        justify-content: center;
+        padding: 0rem;
+        margin: 1rem auto 0rem auto;
+        max-width: 100%;
+    }                           
 }
 
 %texto-servicios {
     color: beige;
     font-size: map-get($font, medium);
-    padding: 0rem 1rem;
+    padding: 0rem;
     margin: 0rem 1rem;
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     max-width: 100%;
     text-align: justify;
-    max-width: 100%;
 }
