--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -22,7 +22,7 @@
         height: 10rem;
         align-items: center;
         margin: 1rem auto;
-        }
+    }   
     &--título {
         font-size: 4em;
         font-family: 'Roboto Condensed', sans-serif;
@@ -89,12 +89,13 @@
     display: block;
     text-decoration: none;
     width: 100%;
-    text-align: center;
     font-size: 2em;
+    text-align: justify;
     flex-wrap: wrap; 
         &:hover {
             background: #971717;
             color: #ffffff; 
+            padding-left: 1rem;
         }
     }
 }
