--- a/sass/views/_portafolio.scss
+++ b/sass/views/_portafolio.scss
@@ -45,5 +45,28 @@
     }                    
 }
 
+.container__portfolio {
+    max-width: 1500px;
+    width: 100%;
+    align-items: center;
+    align-content: center;
+    .foto1 {
+        max-width: 40%;
+    }
+    .video1 {
+        max-width: 60%;
+    }
+    .foto2 {
 
+    }
+    .video2 {
+
+    }
+    .foto3 {
+
+    }
+    .video3 {
+
+    }
+}
 
