modificando el portfolio

--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,7 +1,7 @@
 /* ESTILOS FOOTER*/
 .container__footer {
     grid-area: footer;
-    padding: 0rem;
+    padding: 1rem 0rem;
     margin: 0rem auto;
     background-image: url(../../assets/images/header.svg);
     justify-content: space-evenly;
