--- a/sass/views/_home.scss
+++ b/sass/views/_home.scss
@@ -24,7 +24,7 @@
     max-width: 150rem;
     height: 65vh;
     max-width: 100%;
-    margin: 0rem auto;
+    margin: 0rem auto 1rem auto;
     padding: 0rem auto;
     align-items: center;
 }
