--- a/sass/views/_servicios-ofrecidos.scss
+++ b/sass/views/_servicios-ofrecidos.scss
@@ -86,8 +86,9 @@
 	grid-area: video1;
 	max-width: 100%;
 }
-.video3 {	display: flex;
-	margin: auto 0rem;
+.video3 {	
+	display: flex;
+	margin: 0rem auto 1rem auto;
 	padding: 0rem;
 	width: 100%;
 	grid-area: video3;
