--- a/css/main.css
+++ b/css/main.css
@@ -106,8 +106,8 @@ body {
   padding: 0rem auto;
   margin: 0rem auto; }
   .container__header--secciones {
-    padding: 0rem;
-    margin: 0rem;
+    padding: 1rem;
+    margin: 1rem 0rem;
     margin-bottom: 0rem;
     text-align: center;
     max-width: 100%;
@@ -142,23 +142,22 @@ body {
   .menu__item {
     list-style-type: none; }
   .menu__link {
+    text-align: center;
     padding: 1rem;
     color: #fff;
     display: block;
     text-decoration: none;
     width: 100%;
     font-size: 2em;
-    text-align: justify;
     flex-wrap: wrap; }
     .menu__link:hover {
       background: #971717;
-      color: #ffffff;
-      padding-left: 1rem; }
+      color: #ffffff; }
 
 /* ESTILOS FOOTER*/
 .container__footer {
   grid-area: footer;
-  padding: 0rem;
+  padding: 1rem 0rem;
   margin: 0rem auto;
   background-image: url(../../assets/images/header.svg);
   justify-content: space-evenly;
@@ -224,7 +223,7 @@ body {
   max-width: 150rem;
   height: 65vh;
   max-width: 100%;
-  margin: 0rem auto;
+  margin: 0rem auto 1rem auto;
   padding: 0rem auto;
   align-items: center; }
 
@@ -332,7 +331,7 @@ body {
 
 .video3 {
   display: flex;
-  margin: auto 0rem;
+  margin: 0rem auto 1rem auto;
   padding: 0rem;
   width: 100%;
   grid-area: video3;
@@ -397,30 +396,53 @@ body {
     display: flex;
     justify-content: center; }
 
-.portfolio__container {
+.grid__portfolio {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  padding: 2rem;
-  gap: 1rem; }
-  .portfolio__container .galería__item {
-    width: auto;
-    height: auto; }
-    .portfolio__container .galería__item .galería__img {
-      width: 100%;
-      height: auto; }
-    .portfolio__container .galería__item .galería__video {
-      width: 100%;
-      height: auto; }
+  justify-content: space-around;
+  grid-template-columns: repeat 3, 1fr;
+  grid-template-rows: repeat(4, 0.5fr);
+  gap: 1% 1%;
+  grid-auto-flow: row;
+  grid-template-areas: "item1 item2 item3" "item4 item5 item6" "item7 item8 item9"; }
 
-.container__portfolio {
-  max-width: 1500px;
-  width: 100%;
+.foto1 {
+  grid-area: foto1;
   align-items: center;
-  align-content: center; }
-  .container__portfolio .foto1 {
-    max-width: 40%; }
-  .container__portfolio .video1 {
-    max-width: 60%; }
+  max-width: 100%; }
+
+.foto2 {
+  grid-area: foto2;
+  max-width: 100%; }
+
+.foto3 {
+  grid-area: foto3;
+  max-width: 100%; }
+
+.foto4 {
+  grid-area: foto4;
+  max-width: 100%; }
+
+.video4 {
+  grid-area: video4;
+  max-width: 100%; }
+
+.foto5 {
+  grid-area: foto5;
+  max-width: 100%; }
+
+@media only screen and (max-width: 400px) {
+  .header {
+    max-width: 400px; }
+  .grid__portfolio {
+    flex-wrap: wrap;
+    width: 375px;
+    max-width: 100%;
+    margin: 0rem auto;
+    display: grid;
+    grid-gap: 0rem;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(9, auto);
+    grid-template-areas: "item1" "item2" "item3" "item4" "item5" "item6" "item7" "item8" "item9"; } }
 
 /* CONTACTO */
 .container__secciones {
