--- a/sass/views/_portafolio.scss
+++ b/sass/views/_portafolio.scss
@@ -26,47 +26,66 @@
     }
 }
 
-.portfolio__container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    padding: 2rem;
-    gap: 1rem;
-    .galería__item {
-        width: auto;
-        height: auto;
-        .galería__img {
-            width: 100%;
-            height: auto;
-        }
-        .galería__video {
-            width: 100%;
-            height: auto;
-        }
-    }                    
+.grid__portfolio {
+	display: grid;
+	justify-content: space-around;
+	grid-template-columns: repeat (3, 1fr);
+	grid-template-rows: repeat(4, 0.5fr);
+	gap: 1% 1%;
+	grid-auto-flow: row;
+	grid-template-areas: 
+        "item1 item2 item3"
+        "item4 item5 item6"
+        "item7 item8 item9"
+}
+.foto1 {
+	grid-area: foto1;
+	align-items: center;
+	max-width: 100%;
+}
+.foto2 {
+	grid-area: foto2;
+	max-width: 100%;
+}
+.foto3 {
+	grid-area: foto3;
+	max-width: 100%;
+}
+.foto4 {
+	grid-area: foto4;
+	max-width: 100%;
+}
+.video4 {
+	grid-area: video4;
+	max-width: 100%;
+}
+.foto5 {
+	grid-area: foto5;
+	max-width: 100%;
 }
 
-.container__portfolio {
-    max-width: 1500px;
-    width: 100%;
-    align-items: center;
-    align-content: center;
-    .foto1 {
-        max-width: 40%;
-    }
-    .video1 {
-        max-width: 60%;
-    }
-    .foto2 {
-
-    }
-    .video2 {
-
-    }
-    .foto3 {
-
-    }
-    .video3 {
-
-    }
+@media only screen and (max-width:400px) {
+	.header {
+		max-width: 400px;
+	}
+	.grid__portfolio {
+		flex-wrap: wrap;
+		width: 375px;
+		max-width: 100%;
+		margin: 0rem auto;
+		display: grid;
+		grid-gap: 0rem;
+		grid-template-columns: repeat(1, 1fr);
+		grid-template-rows: repeat(9,auto);
+		grid-template-areas: 
+        "item1"
+        "item2"
+        "item3"
+        "item4"
+        "item5"
+        "item6"
+        "item7"
+        "item8"
+        "item9",
+	}
 }
-
