--- a/sass/views/_home.scss
+++ b/sass/views/_home.scss
@@ -23,15 +23,12 @@
 .picture__index {
     max-width: 150rem;
     height: 65vh;
-    max-width: 100%;
+    max-height: auto;
+    width: 100%;
     margin: 0rem auto 1rem auto;
     padding: 0rem auto;
     align-items: center;
 }
-
-
-
-
 
 
 
