--- a/sass/views/_servicios-ofrecidos.scss
+++ b/sass/views/_servicios-ofrecidos.scss
@@ -70,14 +70,6 @@
     @extend %texto-servicios;
     grid-area: texto3;
 }
-.img-sec {
-    grid-area: foto;
-	padding: 0rem;
-	display: flex;
-	margin: auto 0rem;
-	width: 100%;
-}
-
 .video1 {
 	padding: 0rem;
 	display: flex;
@@ -85,6 +77,12 @@
 	width: 100%;
 	grid-area: video1;
 	max-width: 100%;
+	border-radius: 1rem;
+	&:hover {
+		-webkit-transform:scale(0.99);transform:scale(0.99);
+		filter: opacity(.5);
+		transition:all .5s ease-in-out;
+	}    
 }
 .video3 {	
 	display: flex;
@@ -93,11 +91,23 @@
 	width: 100%;
 	grid-area: video3;
 	max-width: 100%;
+	border-radius: 1rem;
+	&:hover {
+		-webkit-transform:scale(0.99);transform:scale(0.99);
+		filter: opacity(.5);
+		transition:all .5s ease-in-out;
+	}    
 }
 .foto {
 	grid-area: foto;
 	padding: 0;
 	max-width: 100%;
+	border-radius: 1rem;
+	&:hover {
+		-webkit-transform:scale(0.99);transform:scale(0.99);
+		filter: opacity(.5);
+		transition:all .5s ease-in-out;
+	}
 }
 .texto {
 	grid-area: texto;
@@ -105,10 +115,17 @@
 	max-width: 100%;
 }
 .video2 {
+	border-radius: 1rem;
 	max-width: 100%;
 	grid-area: video2;
 	display: flex;
 	align-items: flex-end;
+	&:hover {
+		-webkit-transform:scale(0.99);transform:scale(0.99);
+		filter: opacity(.5);
+		transition:all .5s ease-in-out;
+	}    
+
 }
 
 @media only screen and (max-width:748px) {
