--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -2,7 +2,7 @@
 .container__footer {
     grid-area: footer;
     padding: 1rem 0rem;
-    margin: 0rem auto;
+    margin: 0rem auto 1rem auto;
     background-image: url(../../assets/images/header.svg);
     justify-content: space-evenly;
     align-items: center;
@@ -25,11 +25,11 @@
             padding: 1rem;
             align-content: center;
             text-align: center;
+            color: #ffffff;
             .datos {
-                color: #971717;
                 font-size: 2em;
                 list-style: none;
-                text-align: justify;
+                text-align: center;
             .span__foot {
                 font-weight: bold;
             }
