--- a/sass/views/_sobre-mí.scss
+++ b/sass/views/_sobre-mí.scss
@@ -31,10 +31,16 @@
     margin: 1rem auto;
     justify-content: center;
     width: 150rem;
+    border-radius: 1rem;   
     &__sobremí {
         width: 100%;
         height: 100%;
         margin: 1rem auto;
         padding: 0rem;
+        border-radius: 1rem;
+        &:hover {
+            -webkit-transform:scale(0.99);transform:scale(0.99);
+            transition:all .5s ease-in-out;
+        }
     }
 }
