--- a/sass/misc/_variables.scss
+++ b/sass/misc/_variables.scss
@@ -3,7 +3,7 @@
 /* MAPS */
 $color-titulos: #971717;
 $color-footer: #000000;
-$color-datos: #fff;
+$color-datos: #626262;
 $font: (
     small: 1em,
     medium: 2em,
