--- a/sass/views/_sobre-mí.scss
+++ b/sass/views/_sobre-mí.scss
@@ -2,7 +2,7 @@
 .container__secciones {
     margin: 0 auto;
     padding: 0 auto;
-    text-align: justify;
+    text-align: center;
     width: 100%;
     background-image: url(../../assets/images/header.svg);
     .título__sección {
@@ -22,7 +22,7 @@
             padding: 1rem 2rem;
             margin: 0rem 2rem;
             display: flex;
-            justify-content: center;
+            justify-content:center;
             text-align: justify;
         }
     }
